src/internal/vm/snapshots/hebi__internal__vm__tests__none_sub_error.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
none - none


# Result:
runtime error: cannot `-` `none`
