src/internal/vm/snapshots/hebi__internal__vm__tests__order_of_eval.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
a := 1
fn f():
  a += 1
  return a
print (a + f())


# Result:
None

# Output:
3

