src/internal/vm/snapshots/hebi__internal__vm__tests__simple_class.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T: pass
T


# Result:
Object(
    ClassType {
        name: "T",
        init: None,
        fields: {},
        methods: {},
        parent: None,
    },
)
