src/internal/vm/snapshots/hebi__internal__vm__tests__simple_data_class.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  v = 0
T


# Result:
Object(
    ClassType {
        name: "T",
        init: None,
        fields: {
            "v": Int(
                0,
            ),
        },
        methods: {},
        parent: None,
    },
)
