src/internal/vm/snapshots/hebi__internal__vm__tests__small_jump.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
for i in 0..3:
  x := i + i + i + i + i + i + i + i + i
  print i


# Result:
None

# Output:
0
1
2

