src/internal/vm/snapshots/hebi__internal__vm__tests__table_access_keyed.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := {a: 10}
v["a"]


# Result:
Int(
    10,
)
